# api/openapi-spec.yaml
@@ -69,7 +69,7 @@ paths:
                   value:
                       - name: hello.txt
                         url: https://api.tempsy.afifurrohman.my.id/files/afif/hello.txt
-                        autoDeletedAt: 1634179200000
+                        autoDeleteAt: 1634179200000
                         privateUrlExpires: 100
                         isPublic: false
                         uploadedAt: 1634179200000
@@ -79,7 +79,7 @@ paths:
 
                       - name: example.png
                         url: https://api.tempsy.afifurrohman.my.id/files/afif/public/example.png
-                        autoDeletedAt: 1634179200000
+                        autoDeleteAt: 1634179200000
                         privateUrlExpires: 100
                         isPublic: true
                         uploadedAt: 1634179200000
@@ -112,7 +112,7 @@ paths:
             $ref: '#/components/schemas/fileName'
 
         - $ref: '#/components/parameters/username'
-        - $ref: '#/components/parameters/fileMetaAutoDeletedAt'
+        - $ref: '#/components/parameters/fileMetaAutoDeleteAt'
         - $ref: '#/components/parameters/fileMetaPrivateUrl'
         - $ref: '#/components/parameters/fileMetaPublic'
         - $ref: '#/components/parameters/type'
@@ -314,7 +314,7 @@ paths:
         - $ref: '#/components/parameters/accept'
         - $ref: '#/components/parameters/username'
         - $ref: '#/components/parameters/filename'
-        - $ref: '#/components/parameters/fileMetaAutoDeletedAt'
+        - $ref: '#/components/parameters/fileMetaAutoDeleteAt'
         - $ref: '#/components/parameters/fileMetaPrivateUrl'
         - $ref: '#/components/parameters/fileMetaPublic'
         - $ref: '#/components/parameters/type'
@@ -539,7 +539,7 @@ components:
         maximum: 604800 # 7 days
         minimum: 2
         format: int
-    fileMetaAutoDeletedAt:
+    fileMetaAutoDeleteAt:
       name: File-Auto-Deleted-At
       in: header
       description: File will be deleted at, max is one year since now
@@ -638,7 +638,7 @@ components:
           type: string
           format: uri
           example: https://api.tempsy.afifurrohman.my.id/files/afif/hello.txt
-        autoDeletedAt:
+        autoDeleteAt:
           type: integer
           format: int64
           description: Unix date in milliseconds
@@ -686,7 +686,7 @@ components:
       value:
         name: hello.webp
         url: https://api.tempsy.afifurrohman.my.id/files/afif/hello.webp
-        autoDeletedAt: 1634179200000
+        autoDeleteAt: 1634179200000
         privateUrlExpires: 100
         isPublic: false
         uploadedAt: 1634179200000
